fix for offset css checks on mobile (iOS)

--- a/Survey/app/styles/survey-styles.scss
+++ b/Survey/app/styles/survey-styles.scss
@@ -100,7 +100,6 @@ $nav-image-file: url("/survey/images/nav_survey.9873f8a0.png");
       border: 1px solid #999;
       display: inline-block;
       height: 14px;
-      margin-bottom: 2px;
       margin-left: -14px;
       width: 14px;
     }
@@ -111,8 +110,9 @@ $nav-image-file: url("/survey/images/nav_survey.9873f8a0.png");
       content: '';
       display: inline-block;
       height: 14px;
-      margin-left: -1px;
       margin-top: -1px;
+      margin-left: -1px;
+      margin-bottom: 7px;
       opacity: 0;
       width: 14px;
     }
